Prevent modules from overflowing in mobile (caused by aos package)

--- a/assets/styles/templates/module/index.scss
+++ b/assets/styles/templates/module/index.scss
@@ -16,6 +16,7 @@
 
 .module {
   position: relative;
+  overflow: hidden;
 
   padding: var(--module-spacing) 0;
 }
